# vitals

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  databricks.yml  docker-compose.yml  mise.toml  mlflow.db  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  terraform.yml
airflow/dags/: vitals_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: _phase2_schema.yml  _schema.yml  _semantic_models.yml  _sources.yml  dim_patient.sql  fct_claim.sql  fct_observation.sql  fct_patient_metrics.sql  fct_pro.sql  fct_wearable_daily.sql  mart_condition_outcomes.sql  mart_cost_outcomes.sql  metricflow_time_spine.sql
dbt/models/omop/: _omop_schema.yml  omop_condition_occurrence.sql  omop_measurement.sql  omop_person.sql
dbt/seeds/: concept_map.csv
docs/adr/: 0001-duckdb-vs-databricks.md  0002-de-identification-at-silver.md  0003-fhir-to-omop.md  0004-three-store-gold.md  0005-spark-execution-databricks-connect.md  0006-pgvector-local-serving-store.md  0007-dbt-semantic-layer.md  0008-feast-feature-store.md  0009-great-expectations-silver-dq.md  0010-kafka-streaming-source.md
docs/superpowers/plans/: 2026-06-25-databricks-uc-terraform.md  2026-06-29-ci-quality-gate.md  2026-06-29-pgvector-rag.md  2026-06-29-semantic-layer.md  2026-06-30-feast-feature-store.md  2026-06-30-medallion-wheel-job.md  2026-07-01-great-expectations-dq.md  2026-07-02-kafka-streaming-source.md  2026-07-02-website-accuracy-pass.md
docs/superpowers/specs/: 2026-06-25-databricks-uc-terraform-design.md  2026-06-26-delta-on-uc-writer-design.md  2026-06-29-ci-quality-gate-design.md  2026-06-29-pgvector-rag-design.md  2026-06-29-semantic-layer-design.md  2026-06-30-feast-feature-store-design.md  2026-06-30-medallion-wheel-job-design.md  2026-07-01-great-expectations-dq-design.md  2026-07-02-kafka-streaming-source-design.md  2026-07-02-website-accuracy-pass-design.md
infra/terraform/: .terraform.lock.hcl  README.md  catalogs.tf  grants.tf  outputs.tf  providers.tf  schemas.tf  terraform.tfvars.example  variables.tf  volumes.tf
ml/feature_store/: feature_store.yaml  features.py
pipelines/: drift_job.py
src/vitals/: catalog.py  dq.py  drift.py  env.py  feature_store.py  generate.py  lakehouse.py  medallion_job.py  monitoring.py  run.py  serve.py  spark_silver.py  streaming.py  vector_index.py  vocab.py
src/vitals/backends/: __init__.py  databricks_delta.py
tests/: test_backends_parity.py  test_dq.py  test_drift.py  test_env.py  test_feature_store.py  test_medallion_job.py  test_run.py  test_semantic_layer.py  test_streaming.py  test_vector_index.py  test_vector_index_integration.py
website/: mkdocs.yml
website/docs/: architecture.md  catalog.md  dev-log.md  governance.md  index.md  results.md  roadmap.md
website/docs/concepts/: glossary.md  healthcare-data.md  index.md
