[project]
name = "vitals"
version = "0.0.1"
description = "From raw clinical signals to trusted, AI-ready data — a health-data medallion lakehouse."
readme = "README.md"
requires-python = ">=3.12"
# Runnable local MVP stack (DuckDB lakehouse — clone & run, no cloud/Java needed).
dependencies = [
    "duckdb>=1.1",
    "dbt-duckdb>=1.8",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
]

[project.optional-dependencies]
# Deployment target (Databricks) + scale path (PySpark) — not needed to run the MVP.
databricks = ["pyspark>=3.5", "dbt-databricks>=1.8"]
feast = ["feast>=0.40"]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
