[project]
name = "vitals"
version = "0.0.1"
description = "From raw clinical signals to trusted, AI-ready data — a health-data medallion lakehouse."
readme = "README.md"
requires-python = ">=3.12"
# Runnable local MVP stack (DuckDB lakehouse — clone & run, no cloud/Java needed).
dependencies = [
    "duckdb>=1.1",
    "dbt-duckdb>=1.8",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
]

[project.optional-dependencies]
# Deployment target (Databricks) + scale path (PySpark) — not needed to run the MVP.
databricks = ["pyspark>=3.5", "dbt-databricks>=1.8"]
# Delta-on-UC writer: runs Spark on Databricks serverless via Spark Connect (ADR 0005).
# NOTE: mutually exclusive with the `databricks` extra above — databricks-connect bundles its own
# pyspark, so install one OR the other in a given environment, never both.
databricks-connect = ["databricks-connect==17.3.*"]
feast = ["feast>=0.40"]
# Vector index serving store — local pgvector (Docker) + fastembed embeddings (ADR 0006).
vector = ["fastembed>=0.3", "psycopg[binary]>=3.1", "pgvector>=0.3"]
# Semantic layer — MetricFlow over the marts' star (ADR 0007); optional, not needed for the MVP.
metrics = ["dbt-metricflow"]
dev = ["ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
# Cap onnxruntime to <1.27.0 on macOS x86_64 (no wheel for 1.27.0 on that platform).
constraint-dependencies = ["onnxruntime<1.27.0; sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.ruff]
target-version = "py312"
line-length = 100
