[project]
name = "vitals"
version = "0.0.1"
description = "From raw clinical signals to trusted, AI-ready data — a health-data medallion lakehouse."
readme = "README.md"
requires-python = ">=3.12"
# Core is a LEAN library with no required third-party deps — so the wheel the medallion job ships to
# serverless stays slim (the on-cluster bronze/silver task needs only ambient Spark, not the MVP stack).
# The runnable local MVP stack lives in the `local` extra below (ADR 0005). Keep core empty.
dependencies = []

[project.optional-dependencies]
# Runnable local MVP stack (DuckDB lakehouse + dbt + the MLflow/feature demo) — clone & run, no cloud
# or Java needed. NOT installed on serverless (the wheel must not drag this onto the cluster).
local = [
    "duckdb>=1.1",
    "dbt-duckdb>=1.8",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
]
# Deployment target (Databricks) + scale path (PySpark) — not needed to run the MVP.
databricks = ["pyspark>=3.5", "dbt-databricks>=1.8"]
# Delta-on-UC writer: runs Spark on Databricks serverless via Spark Connect (ADR 0005).
# NOTE: mutually exclusive with the `databricks` extra above — databricks-connect bundles its own
# pyspark, so install one OR the other in a given environment, never both.
databricks-connect = ["databricks-connect==17.3.*"]
feast = ["feast>=0.40"]
# Vector index serving store — local pgvector (Docker) + fastembed embeddings (ADR 0006).
vector = ["fastembed>=0.3", "psycopg[binary]>=3.1", "pgvector>=0.3"]
# Semantic layer — MetricFlow over the marts' star (ADR 0007); optional, not needed for the MVP.
metrics = ["dbt-metricflow"]
# Data-quality gate — Great Expectations validates the silver contract in CI (ADR 0009). A GATE (run in
# CI), not an optional demo — but kept out of core so clone-and-run/`make run` stays lean.
dq = ["great-expectations>=1.0"]
# Streaming — real Kafka source for the wearable feed (ADR 0010). Local Docker broker; not in CI.
# pandas + pyarrow are used by run_parity to read/compare the two cleaned parquet outputs (core is lean).
stream = ["kafka-python>=2.0", "pyspark>=3.5", "pandas>=2.2", "pyarrow>=17"]
dev = ["ruff", "pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
vitals-medallion = "vitals.medallion_job:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
# Cap onnxruntime to <1.27.0 on macOS x86_64 (no wheel for 1.27.0 on that platform).
constraint-dependencies = ["onnxruntime<1.27.0; sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.ruff]
target-version = "py312"
line-length = 100
